# MetroidvaniaRT

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  cpp.hint
include/: MetroidvaniaRT.h
include/MetroidvaniaRT/: IdentificationInformation.h  MetroidvaniaRunner.h
include/MetroidvaniaRT/Graphics/: FillPlatform.h  ImagePlatform.h  Platform.h  Stage.h  StageService.h
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.c  main.cpp
src/MetroidvaniaRT/: MetroidvaniaRunner.cpp
src/MetroidvaniaRT/Graphics/: FillPlatform.cpp  ImagePlatform.cpp  Platform.cpp  Stage.cpp  StageService.cpp
src/lib/: MetroidvaniaRunner.cpp  MetroidvaniaRunner.h  MetroidvaniaStageService.cpp  MetroidvaniaStageService.h
src/lib/structures/: Character.cpp  Character.h  MetroidvaniaBase.h  MetroidvaniaCommonArgs.h  MetroidvaniaIdentificationInformation.h
src/lib/structures/platform/: MetroidvaniaFillPlatform.cpp  MetroidvaniaFillPlatform.h  MetroidvaniaImagePlatform.cpp  MetroidvaniaImagePlatform.h  MetroidvaniaPlatform.cpp  MetroidvaniaPlatform.h
src/lib/structures/stage/: MetroidvaniaPlatform.cpp  MetroidvaniaPlatform.h  MetroidvaniaStage.cpp  MetroidvaniaStage.h  MetroidvaniaStageBackground.h
src/lib_C/: MetroidvaniaRunner_C.cpp  MetroidvaniaRunner_C.h  MetroidvaniaStageService_C.cpp  MetroidvaniaStageService_C.h
