set(METROIDVANIART_SAMPLES_HEADERS)
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${METROIDVANIART_SAMPLES_HEADERS})

file(GLOB_RECURSE METROIDVANIART_SAMPLES_SOURCES CONFIGURE_DEPENDS *.cpp)
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${METROIDVANIART_SAMPLES_SOURCES})

set(METROIDVANIART_SAMPLES_LINK_LIBRARIES
  MetroidvaniaRT
)

add_executable(MetroidvaniaRTSamples ${METROIDVANIART_SAMPLES_HEADERS} ${METROIDVANIART_SAMPLES_SOURCES})
target_link_libraries(MetroidvaniaRTSamples ${METROIDVANIART_SAMPLES_LINK_LIBRARIES})

add_custom_command(TARGET MetroidvaniaRTSamples POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory $<TARGET_FILE_DIR:MetroidvaniaRT> $<TARGET_FILE_DIR:MetroidvaniaRTSamples>
)
