file(GLOB_RECURSE METROIDVANIART_LIB_HEADERS CONFIGURE_DEPENDS ../include/*.h)
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${METROIDVANIART_LIB_HEADERS})

file(GLOB_RECURSE METROIDVANIART_LIB_SOURCES CONFIGURE_DEPENDS MetroidvaniaRT/*.cpp)
source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${METROIDVANIART_LIB_SOURCES})

set(METROIDVANIART_LIB_LINK_LIBRARIES
  NovelRT
)

if (WIN32)
  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()

add_library(MetroidvaniaRT SHARED ${METROIDVANIART_LIB_HEADERS} ${METROIDVANIART_LIB_SOURCES})
target_link_libraries(MetroidvaniaRT ${METROIDVANIART_LIB_LINK_LIBRARIES})

file(GLOB_RECURSE METROIDVANIART_LIB_FONT_RESOURCES CONFIGURE_DEPENDS Resources/Fonts/*.ttf)
file(GLOB_RECURSE METROIDVANIART_LIB_IMAGE_RESOURCES CONFIGURE_DEPENDS Resources/Images/*.png)
file(GLOB_RECURSE METROIDVANIART_LIB_SHADER_RESOURCES CONFIGURE_DEPENDS Resources/Shaders/*.glsl)

add_custom_command(TARGET MetroidvaniaRT POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:MetroidvaniaRT>/Resources/Fonts
  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${METROIDVANIART_LIB_FONT_RESOURCES} $<TARGET_FILE_DIR:MetroidvaniaRT>/Resources/Fonts
  COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:MetroidvaniaRT>/Resources/Images
  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${METROIDVANIART_LIB_IMAGE_RESOURCES} $<TARGET_FILE_DIR:MetroidvaniaRT>/Resources/Images
  COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:MetroidvaniaRT>/Resources/Shaders
  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${METROIDVANIART_LIB_SHADER_RESOURCES} $<TARGET_FILE_DIR:MetroidvaniaRT>/Resources/Shaders
)
